traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: value unary_! is not a member of Unit
  while(!fini()){
        ^Snake:21: warning: enclosing method fini has result type Unit: return value discarded
  return fini
  ^